--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "minesweeper",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=3334",
     "build": "ng build --prod --base-href=/minesweeper/",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "publish": "npx ngh --dir=dist/minesweeper --no-silent",
+    "buildPublish": "npm run build && npm run publish"
   },
   "private": true,
   "dependencies": {
